--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set-option -g status-position top
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'              # Restore tmux environment after system restart.             
 set -g @plugin 'tmux-plugins/tmux-continuum'             # automatic restoring and continuous saving of tmux environment.
-set -g @plugin 'catppuccin/tmux'                         # theme                       
+set -g @plugin 'catppuccin/tmux'                                              
 set -g @plugin 'tmux-plugins/tpm'                        # Tmux plugin manager
 
 set -g @continuum-restore 'on'
